syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.sensor";

package com.sensor;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service SensorService {
  rpc getAll (google.protobuf.Empty) returns (stream Sensor) {}
  rpc getData (google.protobuf.StringValue) returns (SensorData) {}
  rpc streamData (SensorRead) returns (stream SensorData) {}
}

enum SensorType {
  DIGITAL = 0;
  PULSE = 1;
}

message Sensor {
  string id = 1;
  string name = 2;
  SensorType type = 3;
}

message SensorRead {
  string id = 1;
  int32 interval = 2;
}

message SensorData {
  int32 value = 1;
  int64 timestamp = 2;
}